--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.17)
+cmake_minimum_required(VERSION 3.16.3)
 project(vkreader)
 
 set(CMAKE_CXX_STANDARD 17)
@@ -18,18 +18,18 @@ add_executable(vkreader
         lib/api/vk_api.cpp
         lib/api/longpoll_api.hpp
         lib/api/longpoll_api.cpp
+        lib/api/config/config.hpp
         reader/reader.hpp
         reader/reader.cpp)
 
 target_link_libraries(vkreader curlpp)
 
 include_directories(${CURL_INCLUDE_DIR})
-include_directories(.
-    lib
-    lib/config
-    lib/network
-    lib/simdjson
-    lib/api
-    reader)
+include_directories(.)
+include_directories(lib)
+include_directories(lib/api)
+include_directories(lib/network)
+include_directories(lib/simdjson)
+include_directories(lib/config)
 
 target_link_libraries(vkreader ${CURL_LIBRARIES})
