--- a/config/config.json
+++ b/config/config.json
@@ -1,5 +1,5 @@
 {
-  "TOKEN": "VK API GROUP TOKEN",
-  "GROUP": "GROUP ID",
-  "API_V": "API VERSION"
+  "TOKEN": "",
+  "GROUP": "",
+  "API_V": ""
 }
