--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION ${CMAKE_VERSION})
-project(vkreader)
+project(vkreader DESCRIPTION "vk char reader" LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 
@@ -36,9 +36,9 @@ file(COPY config/config.json DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 add_subdirectory(modules)
 
 include_directories(${INCLUDE_DIRECTORIES})
-add_executable(vkreader ${SOURCES})
+add_executable(${PROJECT_NAME} ${SOURCES})
 
-target_link_libraries(vkreader curlpp fmt ${CURL_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} curlpp fmt ${CURL_LIBRARIES})
 
-target_include_directories(vkreader PRIVATE modules/fmt/include)
-target_include_directories(vkreader PRIVATE modules/curlpp/include)
+target_include_directories(${PROJECT_NAME} PRIVATE modules/fmt/include)
+target_include_directories(${PROJECT_NAME} PRIVATE modules/curlpp/include)
