--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,17 @@
 languages: cpp
-install: libcurl4 libcurl4-openssl-dev
 compiler:
   - gcc
   - clang
+matrix:
+  include:
+    - os: linux
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - make
+            - cmake
+            - gcc
+            - libcurl4
+            - libcurl4-openssl-dev
