--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ compiler:
   - gcc
   - clang
 install:
-  - sudo apt install libcurl4 libcurl4-openssl-dev cmake -y
+  - sudo apt install libcurl4 libcurl4-openssl-dev
 
 script:
   - cmake --version
