--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ compiler:
   - gcc
   - clang
 install:
-  - sudo apt install libcurl4 libcurl4-openssl-dev
+  - sudo apt install libcurl4 libcurl4-openssl-dev build-essential
 
 script:
   - cmake --version
