--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -20,7 +20,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-
+    
+    - name: update submodules
+      run: git submodule update --init --recursive
+ 
     - name: install libs
       run: brew install curl
       
