--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -25,7 +25,7 @@ jobs:
         run: git submodule update --init --recursive
 
       - name: install vcpkg
-        run: git clone https://github.com/microsoft/vcpkg; cd vcpkg; .\bootstrap-vcpkg.bat; .\vcpkg.exe install curl; .\vcpkg.exe integrate install
+        run: git clone https://github.com/microsoft/vcpkg; cd vcpkg; .\bootstrap-vcpkg.bat; .\vcpkg.exe install curl[openssl]:x64-windows; .\vcpkg.exe integrate install
 
       - name: build
         run: mkdir build; cd build; cmake .. -DCMAKE_TOOLCHAIN_FILE=D:/a/vk-cli/vk-cli/vcpkg/scripts/buildsystems/vcpkg.cmake; cmake --build .
